# elder-shop

./: Cargo.toml  docker-compose.arm64v8.yml  docker-compose.yml
benchmark/: post.lua
src/: main.rs
src/apps/: base.rs  mod.rs
src/apps/checkout/: models.rs
src/apps/event/: models.rs  types.rs
src/apps/invoice/: models.rs
src/apps/order/: models.rs
src/apps/product/: models.rs
src/apps/shop/: mod.rs  models.rs  resolvers.rs
src/apps/user/: models.rs  mutations.rs  resolvers.rs
src/apps/warehouse/: mod.rs
