[package]
name = "elder-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "4"
async-graphql-actix-web = "4"
actix-web = { version = "4", default-features = false, features = ["macros"] }
tokio = { version = "1", features = ["full"] }
actix-redis = "0.12.0"
actix = "0.13"
redis-async = "0.13.0"
